# cez-pnd-data

./: .gitattributes  .gitignore  LICENSE  README.md  ROLLOUT.md  hacs.json  pyproject.toml  repository.json  requirements_test.txt  test_2_new_context.py  test_4_page_fetch.py  test_4_page_fetch_simple.py  test_auth_playwright.py
.github/workflows/: ci.yml  test.yml
.sisyphus/drafts/: ha-integration.md
.sisyphus/evidence/: task-5-discovery.txt  task-5-state.txt
.sisyphus/notepads/ha-addon-mqtt-rebuild/: learnings.md
addon/: CHANGELOG.md  Dockerfile  config.yaml  requirements.txt  run.sh
addon/src/: auth.py  cookie_utils.py  dip_client.py  hdo_parser.py  main.py  mqtt_publisher.py  orchestrator.py  parser.py  pnd_client.py  session_manager.py
cez_pnd.egg-info/: PKG-INFO  SOURCES.txt
custom_components/cez_pnd/: __init__.py  api_client.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/cez_pnd/translations/: en.json
evidence/: pnd-playwright-data.json  pnd-portal-analysis.md  poc-comparison.md  poc-summary.md
evidence/live-fetch/: pnd-784703-20260217_101847.json  pnd-784703-20260220_201047.json  pnd-784703-20260221_145526.json
evidence/poc-results/: test_0_evidence_analysis.json  test_1_aiohttp.json  test_2_new_context.json  test_3_reuse_context.json  test_4_page_fetch.json  test_5_network_intercept.json  test_6_storage_dump.json
scripts/: live_verify_flow.py  live_verify_flow.py.backup  live_verify_flow.py.backup2  live_verify_flow_v2.py  live_verify_rules.py  smoke_test.sh  test-local.sh  test_1_aiohttp_debug.py  test_3_reuse_context.py  test_5_network_intercept.py  test_shared_context_hypothesis.py
tests/: conftest.py  test_api_client.py  test_auth_session.py  test_cez_parser.py  test_config_flow.py  test_config_validation.py  test_cookie_utils.py  test_coordinator.py  test_dip_client.py  test_e2e_smoke.py  test_hdo_parser.py  test_init.py  test_invalid_credentials.py  test_live_verify_rules.py  test_live_verify_rules_old.py  test_mqtt_discovery.py  test_pnd_client.py  test_pnd_fetcher.py  test_runtime_orchestrator.py  test_sensor.py
